@@ -71,43 +71,43 @@
   "Mappings": {
     "RegionToAmi": {
       "ap-northeast-1": {
-        "coreos": "ami-84e0c7ea",
+        "coreos": "ami-802dcde1",
         "el7": "ami-b8d831d9"
       },
       "ap-southeast-1": {
-        "coreos": "ami-da67a0b9",
+        "coreos": "ami-4c97462f",
         "el7": "ami-133eee70"
       },
       "ap-southeast-2": {
-        "coreos": "ami-f35b0590",
+        "coreos": "ami-55f6d936",
         "el7": "ami-f57d5496"
       },
       "eu-central-1": {
-        "coreos": "ami-fdd4c791",
+        "coreos": "ami-3b1cf054",
         "el7": "ami-2e6f8141"
       },
       "eu-west-1": {
-        "coreos": "ami-55d20b26",
+        "coreos": "ami-2a118659",
         "el7": "ami-20af3253"
       },
       "sa-east-1": {
-        "coreos": "ami-154af179",
+        "coreos": "ami-ee1b9382",
         "el7": "ami-89179ce5"
       },
       "us-east-1": {
-        "coreos": "ami-37bdc15d",
+        "coreos": "ami-3cf20751",
         "el7": "ami-7848b115"
       },
       "us-gov-west-1": {
-        "coreos": "ami-05bc0164",
+        "coreos": "ami-9041fef1",
         "el7": ""
       },
       "us-west-1": {
-        "coreos": "ami-27553a47",
+        "coreos": "ami-61e99101",
         "el7": "ami-a891ebc8"
       },
       "us-west-2": {
-        "coreos": "ami-00ebfc61",
+        "coreos": "ami-c30af5a3",
         "el7": "ami-1e22d97e"
       }
     },
