@@ -244,43 +244,43 @@
     },
     "RegionToAmi": {
       "us-west-2": {
-        "coreos": "ami-00ebfc61",
+        "coreos": "ami-32a85152",
         "el7": "ami-1e22d97e"
       },
       "sa-east-1": {
-        "coreos": "ami-154af179",
+        "coreos": "ami-038c076f",
         "el7": "ami-89179ce5"
       },
       "ap-northeast-1": {
-        "coreos": "ami-84e0c7ea",
+        "coreos": "ami-72ae4313",
         "el7": "ami-b8d831d9"
       },
       "us-east-1": {
-        "coreos": "ami-37bdc15d",
+        "coreos": "ami-6160910c",
         "el7": "ami-7848b115"
       },
       "ap-southeast-1": {
-        "coreos": "ami-da67a0b9",
+        "coreos": "ami-d704d5b4",
         "el7": "ami-133eee70"
       },
       "us-gov-west-1": {
-        "coreos": "ami-05bc0164",
+        "coreos": "ami-c42b94a5",
         "el7": ""
       },
       "eu-central-1": {
-        "coreos": "ami-fdd4c791",
+        "coreos": "ami-cfca25a0",
         "el7": "ami-2e6f8141"
       },
       "us-west-1": {
-        "coreos": "ami-27553a47",
+        "coreos": "ami-79473c19",
         "el7": "ami-a891ebc8"
       },
       "eu-west-1": {
-        "coreos": "ami-55d20b26",
+        "coreos": "ami-c36effb0",
         "el7": "ami-20af3253"
       },
       "ap-southeast-2": {
-        "coreos": "ami-f35b0590",
+        "coreos": " ami-4b7a5428",
         "el7": "ami-f57d5496"
       }
     }
