@@ -2,6 +2,9 @@ Documentation of changes which may break some install environments
 
 
 1.8-dev
+ - Updated to CoreOS Alpha 1053. See https://github.com/dcos/dcos/pull/148 and
+   https://dcosjira.atlassian.net/browse/DCOS-38 for why CoreOS alpha was chosen
+   (It was the best of bad options)
  - Make the admin load balancer in all templates do TCP, not HTTP load balancing
  - Switch Ubuntu in Azure to 16.04 LTS final release
  - Teach spartan / DNS to only listen on a local internal address
